--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -71,13 +71,14 @@
 
             <div class="searchTitle">노선검색</div>
 
-            <form action="">
+            <form action="" class="searchForm">
 
                 <!-- 변경영역 -->
                 <div class="search_inputArea">
                     <label for="">노선이름</label>
                     <input type="text">
                     <label for="">날짜</label>
+                    <input type="date" class="searchDate">~
                     <input type="date" class="searchDate">
                     <div class="dateControllBtnBox">
                         <div class="dateControllBtn">
@@ -223,6 +224,7 @@
                         <tr>
                             <td>차량번호</td>
                             <td>기사이름</td>
+                            <td>용역기사</td>
                             <td>계약금액</td>
                             <td>상여금</td>
                             <td>공제</td>
@@ -232,6 +234,11 @@
                     <tbody>
                         <tr>
                             <td></td>
+                            <td>
+                                <select name="" id="" class="orderDriverSelect inputTextUnit">
+                                    <option value=""></option>
+                                </select>님
+                            </td>
                             <td><input type="text" class="inputText inputTextUnit">님</td>
                             <td><input type="text" class="inputText inputTextUnit">원</td>
                             <td><input type="text" class="inputText inputTextUnit">원</td>
@@ -351,7 +358,6 @@
 
 
 {% block script %}
-<script src="{% static 'js/dispatch/oneStepDate.js' %}"></script>
 <script src="{% static 'js/dispatch/bothScroll.js' %}"></script>
 <script src="{% static 'js/dispatch/crateDispatch.js' %}"></script>
 <script src="{% static 'js/dispatch/orderDispatch.js' %}"></script>
