--- a/static/css/dispatch/regularly.css
+++ b/static/css/dispatch/regularly.css
@@ -79,12 +79,6 @@
   width: 7%;
 }
 
-.listTable tr td:nth-child(3),
-.listTable tr td:nth-child(4),
-.listTable tr td:nth-child(5) {
-  cursor: pointer;
-}
-
 .listTable tr td:nth-child(6),
 .listTable tr td:nth-child(7) {
   width: 10%;
@@ -107,7 +101,21 @@
 
 .listTable tbody tr:nth-child(odd):hover,
 .listTable tbody tr:nth-child(even):hover {
-    background-color: #b4b4b4;
+  background-color: #b4b4b4;
+}
+
+.listTable tbody tr {
+  cursor: pointer;
+}
+
+.orderDriver,
+.orderSpareDriver {
+  display: none;
+  width: 96%;
+  height: 2.5rem;
+  margin: 0 auto;
+  outline: none;
+  box-sizing: border-box;
 }
 
 
