--- a/static/css/dispatch/dispatchBase.css
+++ b/static/css/dispatch/dispatchBase.css
@@ -124,7 +124,7 @@
 }
 
 .hourTd {
-    width: 4.2rem;
+    width: 3.6rem;
     height: 100%;
     border-left: 0.1rem solid black;
     border-bottom: 0.1rem solid black;
@@ -138,7 +138,7 @@
     height: 100%;
     font-size: 1.4rem;
     text-align: center;
-    background-color: #444;
+    background-color: #0069D9;
     color: white;
     cursor: pointer;
 }
@@ -170,6 +170,18 @@
     transform: translate(0, -50%);
 }
 
+.haveSchedule{
+    order: 2;
+}
+
+.haveSchedule .driverTd{
+    background-color: #444;
+}
+
+.otherDriver{
+    border: 0.3rem solid #FF9900;
+    box-sizing: border-box;
+}
 
 
 
